--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,105 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer ></script>
         {% endblock %}
     </head>
+
     <body>
-        {% block body %}{% endblock %}
+    <nav class="navbar sticky-top navbar-expand-lg bg-body-primary" style="background-color: white;">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <a href="/">
+                <img class="pe-3" src="{{ asset('media/Logo.png') }}"  alt="" style="width: 80px">
+            </a>
+
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a href="/fiche/frais">
+                            <button class="btn btn-outline-dark rounded-2 me-2 custom-button" onclick="animateButton(this)" type="button"><b>FRAIS</b></button>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="">
+                            <button class="btn btn-outline-dark rounded-2 me-2 custom-button " onclick="animateButton(this)" type="button"><b>DIMITRI</b></button>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="">
+                            <button class="btn btn-outline-dark rounded-2 me-2 custom-button" onclick="animateButton(this)" type="button"><b>NTR</b></button>
+                        </a>
+                    </li>
+                </ul>
+
+
+            </div>
+        </div>
+    </nav>
+
+    <style>
+        /* Style initial du bouton */
+        .custom-button {
+            background-image: url('{{ asset('media/button.png') }}');
+            background-size: cover;
+            color: white;
+            position: relative;
+            overflow: hidden;
+            z-index: 1; /* Pour que le texte reste au premier plan */
+            transition: transform 0.2s ease-in-out; /* Ajout d'une transition pour l'effet de pop */
+        }
+
+        /* Arrière-plan au survol */
+        .custom-button::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0, 0, 0, 0.2); /* Couleur de fond légèrement foncée au survol */
+            opacity: 0; /* Initialement transparent */
+            transition: opacity 0.3s ease-in-out;
+            z-index: -1; /* Pour que l'arrière-plan reste en arrière-plan */
+        }
+
+        .custom-button:hover::before {
+            opacity: 1; /* Au survol, l'arrière-plan devient légèrement opaque */
+        }
+
+        /* Couleur du texte */
+        .custom-button span {
+            color: white;
+            position: relative;
+            z-index: 2; /* Pour que le texte reste au premier plan */
+        }
+
+        /* Classe pour l'animation "pop" */
+        .pop {
+            transform: scale(0.50); /* Réduire légèrement la taille du bouton */
+        }
+    </style>
+
+    <script>
+        function animateButton(button) {
+            button.classList.add('pop'); // Ajoute la classe pour l'animation "pop"
+            setTimeout(function() {
+                button.classList.remove('pop'); // Retire la classe après un court délai
+            }, 100);
+        }
+    </script>
+
+
+    <div class="bg-img" style="background-image: url('{{ asset('media/banniere.pngsy') }}') ; height: 45vh;"></div>
+    <br />
+    <hr>
+
+
+
+
+
+        {% block body %}
+        {% endblock %}
+
     </body>
+
 </html>
