Mega commit parce que j'avais complètement oublié

--- a/templates/fiche_frais/new.html.twig
+++ b/templates/fiche_frais/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New FicheFrais{% endblock %}
 
 {% block body %}
-    <h1>Create new FicheFrais</h1>
+    <h1>Créer une nouvelle fiche</h1>
 
     {{ include('fiche_frais/_form.html.twig') }}
 
-    <a href="{{ path('app_fiche_frais_index') }}">back to list</a>
+    <a href="{{ path('app_fiche_frais_index') }}">retour</a>
 {% endblock %}
