--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -10,7 +10,7 @@
 
     <div class="row">
         <div class>
-            <h1>Bienvenue {{ app.user.login }}✅</h1>
+            <h1>Bienvenue {{ app.user.email }}✅</h1>
         </div>
     </div>
     <div>
