--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,10 +6,15 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+            <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+            <link rel="stylesheet" href="chemin/vers/pikaday.css">
         {% endblock %}
 
         {% block javascripts %}
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer ></script>
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+            <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+            <script src="chemin/vers/pikaday.js"></script>
         {% endblock %}
     </head>
 
@@ -27,17 +32,12 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a href="/fiche/frais">
-                            <button class="btn btn-outline-dark rounded-2 me-2 custom-button" onclick="animateButton(this)" type="button"><b>FRAIS</b></button>
+                            <button class="btn btn-outline-dark rounded-2 me-2 custom-button" onclick="animateButton(this)" type="button"><b>SAISIR FICHE</b></button>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="">
-                            <button class="btn btn-outline-dark rounded-2 me-2 custom-button " onclick="animateButton(this)" type="button"><b>DIMITRI</b></button>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="">
-                            <button class="btn btn-outline-dark rounded-2 me-2 custom-button" onclick="animateButton(this)" type="button"><b>NTR</b></button>
+                        <a href="/fiche">
+                            <button class="btn btn-outline-dark rounded-2 me-2 custom-button " onclick="animateButton(this)" type="button"><b>MES FICHES</b></button>
                         </a>
                     </li>
                 </ul>
@@ -100,7 +100,7 @@
     </script>
 
 
-    <div class="bg-img" style="background-image: url('{{ asset('media/banniere.pngsy') }}') ; height: 45vh;"></div>
+    <div class="bg-img" style="background-image: url('{{ asset('media/banniere.png') }}') ; height: 45vh;"></div>
     <br />
     <hr>
 
