--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a href="/fiche/frais">
+                        <a href="/saisir/fiche/frais">
                             <button class="btn btn-outline-dark rounded-2 me-2 custom-button" onclick="animateButton(this)" type="button"><b>SAISIR FICHE</b></button>
                         </a>
                     </li>
