--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -22,11 +22,12 @@
                 </div>
                 <div class="col-2">
                     <input type="text" id="username" name="_username" value="{{ last_username }}" style="text-align:center;" class="form-control" placeholder="Adresse Email" aria-label="Adresse Email">
-                    <label for="username">Email</label>
+                    <label for="username">louis.villechalane@gsb.fr</label>
                 </div>
 
                 <div class="col-2">
                     <input type="password" id="password" name="_password" style="text-align:center;" class="form-control" placeholder="Mot de Passe" aria-label="Mot de Passe">
+                    <label for="password">jux7g</label>
                 </div>
             </div>
             <br/>
