--- a/templates/saisir_fiche_frais/index.html.twig
+++ b/templates/saisir_fiche_frais/index.html.twig
@@ -44,6 +44,7 @@
         </fieldset>
     </div>
     <button type="submit" class="btn btn-dark custom-button mb-3 ps-5 pe-5 mt-3">{{ button_label|default('Valider') }}</button>
+    <button type="reset" class="btn btn-dark custom-button mb-3 ps-5 pe-5 mt-3">{{ button_label|default('Effacer') }}</button>
     {{ form_end(formFraisF) }}
 
 
