--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,6 +40,11 @@
                             <button class="btn btn-outline-dark rounded-2 me-2 custom-button " onclick="animateButton(this)" type="button"><b>MES FICHES</b></button>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a href="/inflation/prime">
+                            <button class="btn btn-outline-dark rounded-2 me-2 custom-button " onclick="animateButton(this)" type="button"><b>PRIME INFLATION</b></button>
+                        </a>
+                    </li>
                 </ul>
 
 
