--- a/templates/fiche/index.html.twig
+++ b/templates/fiche/index.html.twig
@@ -10,7 +10,8 @@
         table {border-collapse: collapse;width: 100%;}
         table tr:nth-child(even){background-color: #f2f2f2;}
         table tr:hover {background-color: #ddd;}
-        table thead {padding-top: 12px;padding-bottom: 12px;text-align: left;background-color: #4192C5;color: white;}
+        table thead {padding-top: 12px;padding-bottom: 12px;text-align: left;background-color: #4192C5; !important;}
+        table thead th:hover { background-color: #4192C5; } /* Ajout pour forcer le survol en bleu également */
         table td, table thead {border: 1px solid #ddd;padding: 8px;}
     </style>
 <div class="center">
@@ -31,7 +32,8 @@
 
         <div class="encadre container">
             <p>
-                Etat : {{ selectedFiche.etat.libelle }} depuis le {{ selectedFiche.dateModif|date('Y-m-d') }} <br> Montant validé : {{ selectedFiche.montantValid }}
+                Etat : {{ selectedFiche.etat.libelle }} depuis le {{ selectedFiche.dateModif|date('Y-m-d') }} <br> Montant validé : {{ selectedFiche.montantValid }} <br>
+                {# Total Frais Forfaitisés : {{ selectedFiche.totalFF }} #}
             </p>
 
                 <h2> Eléments forfaitisés </h2>
