--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -36,12 +36,12 @@
                     <input type="checkbox" value="se-souvenir" id="remember-me-checkbox"> Se souvenir de moi
                 </label>
             </div>
-            <div id="remember-me-text" style="display: none;">Non je ne sais pas le faire</div> <!-- Texte initiallement masqué -->
+            <div id="remember-me-text" style="display: none;">Flemme 🥶</div> <!-- Texte initiallement masqué -->
             <br/>
 
             <label>
                 <button class="btn btn-lg btn-block custom-button" onclick="animateButton(this)"><span>Se connecter</span></button>
-                <input type="hidden" name="_target_path" value="/accueil">
+                <input type="hidden" name="_target_path" value="/saisir-fiche-frais">
             </label>
 
             <script>
