--- a/templates/saisir_fiche_frais/index.html.twig
+++ b/templates/saisir_fiche_frais/index.html.twig
@@ -12,7 +12,7 @@
 
 
 <div class="container">
-
+    <h2> Eléments hors forfaits</h2>
     {{ form_start(formFraisF) }}
 
     <div class="corpsForm">
@@ -30,9 +30,7 @@
 
 
         <div class="encadre">
-            <p>
 
-            </p>
 
             <h2> Eléments hors forfaits</h2>
             {{ form_start(formFraisHF) }}
