--- a/templates/fiche/index.html.twig
+++ b/templates/fiche/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello FicheController!{% endblock %}
+{% block title %}Mes fiches{% endblock %}
 
 {% block body %}
     <style>
