--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <title>{% block title %}Galaxy Swiss Bourdin{% endblock %}</title>
+        <link rel="icon" href="{{ asset('media/GSBicon.png') }}" >
         {% block stylesheets %}
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
             <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -16,6 +16,7 @@
             <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
             <script src="chemin/vers/pikaday.js"></script>
         {% endblock %}
+
     </head>
 
     <body>
@@ -62,7 +63,7 @@
                     <li class="nav-item">
                         {% if app.user %}
                         <a href="/logout">
-                            <button class="btn btn-outline-dark rounded-2 me-2 custom-button " onclick="animateButton(this)" type="button"><b>Déconnexion</b></button>
+                            <button class="btn btn-outline-dark rounded-2 me-2 custom-button " onclick="animateButton(this)" type="button"><b>DECONNEXION</b></button>
                         </a>
                         {% endif %}
                     </li>
