--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,6 +63,10 @@
     margin-bottom: 10px;
 }
 
+.inputMarginRight{
+    margin-right: 10px;
+}
+
 /* Classe pour l'animation "pop" */
 .pop {
     transform: scale(0.50); /* Réduire légèrement la taille du bouton */
