--- a/templates/fiche/index.html.twig
+++ b/templates/fiche/index.html.twig
@@ -11,6 +11,7 @@
         table tr:nth-child(even){background-color: #f2f2f2;}
         table tr:hover {background-color: #ddd;}
         table thead {padding-top: 12px;padding-bottom: 12px;text-align: left;background-color: #4192C5;color: white;}
+        table thead tr:hover {background-color: #4192C5;}
         table td, table thead {border: 1px solid #ddd;padding: 8px;}
     </style>
 <div class="center">
@@ -36,7 +37,7 @@
 
                 <h2> Eléments forfaitisés </h2>
 
-                <table class=" container table">
+                <table class="container table">
                     <thead>
                         {% for uneLigneFrais in selectedFiche.ligneFraisForfait %}
                         <th>{{ uneLigneFrais.fraisforfait.libelle }}</th>
