--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -67,6 +67,18 @@
                         {% endif %}
                     </li>
 
+                    <li class="nav-item">
+                        {% if app.user %}
+                            <a href="/comptable">
+                                <button class="btn btn-outline-dark rounded-2 me-2 custom-button comptable " onclick="animateButton(this)" type="button"><b>COMPTABLE</b></button>
+                            </a>
+                        {% else %}
+                            <a href="/">
+                                <button class="btn btn-outline-dark rounded-2 me-2 custom-button comptable" onclick="animateButton(this)" type="button"><b>COMPTABLE</b></button>
+                            </a>
+                        {% endif %}
+                    </li>
+
                 </ul>
 
 
