--- a/templates/comptable/index.html.twig
+++ b/templates/comptable/index.html.twig
@@ -9,15 +9,81 @@
     .bg-img {
         filter: hue-rotate(320deg);
     }
+    .corpsForm{
+        width: 40%;
+        margin-left: 30%;
+    }
+    .form-select{
+        margin-left: 10%;
+        width: 80%;
+        align-content: center;
+        text-align: center;
+        font-size: 20px;
+        font-weight: 500;
+    }
+
+
 </style>
+    <div class="container">
+        <div class="center">
+            <h1 class="mb-3">
+                Gestion Comptable
+            </h1>
+            <button id="btnUser" type="submit" class="btn btn-dark custom-button mb-3 ps-5 pe-5 mt-3 bg-img"><h4>Par visiteur</h4></button> &nbsp;&nbsp;&nbsp;&nbsp;
+            <button id="btnMonth" type="submit" class="btn btn-dark custom-button mb-3 ps-5 pe-5 mt-3 bg-img"><h4>Par mois</h4></button>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+            <br><br>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/blanchet.aurelien/symfony/GSB/src/Controller/ComptableController.php'|file_link(0) }}">src/Controller/ComptableController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/blanchet.aurelien/symfony/GSB/templates/comptable/index.html.twig'|file_link(0) }}">templates/comptable/index.html.twig</a></code></li>
-    </ul>
-</div>
+
+                <div id="userBlock" class="corpsForm">
+                        <h3>Sélectionnez un utilisateur</h3>
+                        {{ form_start(form) }}
+                        {{ form_widget(form) }}
+                        {{ form_end(form) }}
+                    <button type="submit" class="btn btn-dark custom-button mb-3 ps-5 pe-5 mt-3 bg-img">
+                        <h5>Valider</h5>
+                    </button>
+                    <br/>
+                </div>
+
+            <div id="monthBlock" class="corpsForm" style="display: none;">
+                <h3>Sélectionnez un mois</h3>
+
+                <button type="submit" class="btn btn-dark custom-button mb-3 ps-5 pe-5 mt-3 bg-img">
+                    <h5>Valider</h5>
+                </button>
+                <br/>
+            </div>
+
+        </div>
+    </div>
+
+
+    <br/><br/>
+
+<script>
+    document.getElementById('btnUser').addEventListener('click', function() {
+        document.getElementById('userBlock').style.display = 'block';
+        document.getElementById('monthBlock').style.display = 'none';
+        localStorage.setItem('displayState', 'user');
+    });
+
+    document.getElementById('btnMonth').addEventListener('click', function() {
+        document.getElementById('userBlock').style.display = 'none';
+        document.getElementById('monthBlock').style.display = 'block';
+        localStorage.setItem('displayState', 'month');
+    });
+    window.onload = function() {
+        var displayState = localStorage.getItem('displayState');
+        if (displayState === 'user') {
+            document.getElementById('userBlock').style.display = 'block';
+            document.getElementById('monthBlock').style.display = 'none';
+        } else if (displayState === 'month') {
+            document.getElementById('userBlock').style.display = 'none';
+            document.getElementById('monthBlock').style.display = 'block';
+        }
+    };
+</script>
 {% endblock %}
+
+
